--- a/_drafts/2016-3-9-MP-4.md
+++ b/_drafts/2016-3-9-MP-4.md
@@ -4,7 +4,7 @@ title: "MP 4: Creating and consuming a RESTful API"
 due: April 12, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - *April 12*, 2016, 11.59PM CST
+<span class="section-heading">Due Date - *April 12*, 2016, 11.59PM CST</span>
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016), [this repository](https://github.com/uiuc-web-programming/mp4_client_starter) and [this repository](https://github.com/uiuc-web-programming/mp4_server_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
@@ -12,11 +12,11 @@ due: April 12, 11.59PM CST
 
 **A demo of a sample app can be seen in [this video](https://www.youtube.com/watch?v=3MoYSJj5M3g).**
 
-###Overview
+<span class="section-heading">Overview</span>
 
 In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at http://www.uiucwp.com:4000/api.
 
-###Part A: Creating a RESTful API
+<span class="section-heading">Part A: Creating a RESTful API</span>
 
 Goal: Implement an API with the following end-points (they would be preceded by something like `http://localhost:4000/api/`). Your implementation should use Node, Express and Mongoose.
 
@@ -110,7 +110,7 @@ Requirements:
 
 
 
-###Part B: Consuming a RESTful API using AngularJS
+<span class="section-heading">Part B: Consuming a RESTful API using AngularJS</span>
 
 Goal: Create a single-page AngularJS task management app that uses the API you developed in part A. 
 
@@ -199,7 +199,7 @@ Also, here is a list of angular things that you might find useful
 + [Writing an AngularJS services](http://stackoverflow.com/a/13939813)
 
 
-###Grade Breakdown
+<span class="section-heading">Grade Breakdown</span>
 * 	Part A: Creating the REST API - 40%
 
 This part will be graded mainly based on the correctness of your API responses. We will check the headers and the body of your HTTP responses to see if they adhere to our specification above.
@@ -208,7 +208,7 @@ This part will be graded mainly based on the correctness of your API responses. 
 
 This part will be graded mainly on the functionality that you are able to implement correctly in your front-end.
 
-###Tips
+<span class="section-heading">Tips</span>
 * Some Mongoose parameters need a Javascript object instead of a JSON string. To do the conversion you can use something like:
 
 ```javascript
@@ -226,7 +226,7 @@ someRoute.options(function(req, res){
 ```
 
 
-###Submission Details
+<span class="section-heading">Submission Details</span>
 TBD
  
 If you run into any issues using the submission and build system, please post on Piazza.
