--- a/_posts/2016-3-9-MP-4.md
+++ b/_posts/2016-3-9-MP-4.md
@@ -8,13 +8,13 @@ due: April 12, 11.59PM CST
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016), [this repository](https://github.com/uiuc-web-programming/mp4_client_starter) and [this repository](https://github.com/uiuc-web-programming/mp4_server_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
-**We will provide a script for you that will populate your own database. In the meantime, feel free to test your front-end against our endpoints (`http://uiucwp.com:4000/api/`).**
+**We will provide a script for you that will populate your own database. In the meantime, feel free to test your front-end against our endpoints.**
 
 **A demo of a sample app can be seen in [this video](https://www.youtube.com/watch?v=3MoYSJj5M3g).**
 
 <span class="section-heading">Overview</span>
 
-In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at http://www.uiucwp.com:4000/api.
+In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. Both the parts can be developed independently. When you are developing the API you can test it using [Postman](https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en). When you are developing your front-end, you can test it using our reference API implementation at [http://www.uiucwp.com:4000/api](http://www.uiucwp.com:4000/api).
 
 <span class="section-heading">Part A: Creating a RESTful API</span>
 
