Revert "Do not need this anymore."
This reverts commit 2c94f987b465dc0190b3bc2fb4564c038525622e.

--- a/_drafts/2015-4-3-Final.md
+++ b/_drafts/2015-4-3-Final.md
@@ -1,1 +1,80 @@
+---
+layout: default
+title: "Final Project: Your Own Web App!"
+due: April 10, 11.59PM CST
+<!-- permalink: lab1.html -->
+---
+### Proposal Due - *April 10*, 2015, 11.59PM CST
+### Prototype Presentation Due - *April 19*, 2015, 11.59PM CST
+### Final Presentation Date - *May 11*, 2015, 8.00AM CST
 
+###Overview
+
+Your goal is to **create a database-backed web application which utilizes a RESTful API** with the following constraints:
+
+1. Your team may only consist of 3-4 people, with each person having a **specific** role.
+2. Your project must be a web application that has a frontend, an API, JavaScript backend, and at least one database.
+3. Your project needs to have user authentication.
+4. Your project needs to have a heuristic evaluation with at least one revision. Make sure you plan time for this.
+5. Your project must have a strong focus on design, primarily in user experience (UX), user interface (UI), and responsiveness.
+
+###Part A: Proposal
+
+**Due - *April 10*, 2015, 11.59PM CST**
+
+Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiuc.web.programming@gmail.com) containing the following:
+
++ Team Members (Names and NetIDs)
++ Problem Statement & Motivation
++ Solution Approach
++ Technologies used for front end & back end
++ Specific breakdown of what each team member is responsible for
+
+###Part B: Prototype Presentation
+
+**Due Date: April 19, 2015, 11.59PM CST**
+
+**Presentations: April 20 and April 22 (in class)**
+
+Each team will be given five minutes to present the following in class:
+
++ The problem they are solving
++ Demo of their solution (webapp) using a [powerpoint prototype](http://boxesandarrows.com/interactive-prototypes-with-powerpoint/).
+
+###Part C: Final Presentation
+
+**Due Date - *May 11*, 2015, 8.00AM CST**
+
+On the day of your final presentation, your overall deliverables are:
+
++ Source Code for the Project / URL to GitHub Repository
++ URL to your hosted project
++ Approximately 5-minute video detailing your web app's purpose, design, and functionality
++ ~~Your powerpoint deck~~
++ Peer evaluation
+
+Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
+
+####Video Requirements
++ 5-minutes length max
++ Should focus on design and functionality
++ Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime) 
++ Demo the important user flows
++ Voice-over should tell a concrete story: user, problem, and how your app solves it
++ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes that were made to the interface?_)
+
+###Grade Breakdown
+
++ Proposal: 5%
++ Prototype Presentation: 10%
++ Final Presentation (Video): 10%
++ Design (UX and UI): 15%
++ Heuristic Evaluation: 10%
++ Front end: 25%
++ Back end (API, server, database): 25%
+
+###Submission Instructions
++ Each team should fill up the [project submission form](https://docs.google.com/forms/d/1brvBOy84rnTvGwEir4xpO7oTl_bgDxOTmSnIcU-v7r8/viewform?usp=send_form)
++ Each team member should fill up the [peer evaluation](https://docs.google.com/forms/d/1QIUinkORsJF0xZMcfuVnfFQdav7lU4SUZHx8atQ3sCw/viewform?usp=send_form)
+
+**Note**: There will be a final competition separate from the grading that will be judged on novelty and usefulness of app. Top teams would be publicized.
