added final project details

--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -30,9 +30,40 @@ Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiu
 + Specific breakdown of what each team member is responsible for
 
 <span class="section-heading">Part B: Paper Prototypes</span>
- 
+
 <span style="color: red">**Due - *March 30*, 2016, In Class**</span>
 
 During class, teams will perform heuristic evaluations of each other's paper prototypes and give feedback.
 
 Paper prototypes should capture at least three of the key interactions in your team's web app. The paper prototypes can be done digitally (using software like powerpoint or balsamiq), but should be printed and brought to class. During class, the TAs will be walking around grading prototypes for quality and completion.
+
+<span class="section-heading">Part C: Final Presentation</span>
+
+<span style="color: red">**Due - *March 30*, 2016, In Class**</span>
+
+On the day of your final presentation, your overall deliverables are:
+
++ Source Code for the Project / URL to GitHub Repository
++ URL to your hosted project
++ Approximately 5-minute video detailing your web app's purpose, design, and functionality
++ ~~Your powerpoint deck~~
++ Peer evaluation
+
+Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
+
+####Video Requirements
++ 5-minutes length max
++ Should focus on design and functionality
++ Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime)
++ Demo the important user flows
++ Voice-over should tell a concrete story: user, problem, and how your app solves it
++ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes. that were made to the interface?_)
+
+###Grade Breakdown
++ Coming soon
+
+###Submission Instructions
++ Each team should fill up the project submission form (coming soon)
++ Each team member should fill up the  peer evaluation (coming soon). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
+
+**Note**: There will be a final competition separate from the grading that will be judged on novelty and usefulness of app. Top teams would be publicized.
