added final project details

--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -39,19 +39,19 @@ Paper prototypes should capture at least three of the key interactions in your t
 
 <span class="section-heading">Part C: Final Presentation</span>
 
-<span style="color: red">**Due - *March 30*, 2016, In Class**</span>
+<span style="color: red">**Due - *May 6*, 2016, In Class**</span>
 
 On the day of your final presentation, your overall deliverables are:
 
 + Source Code for the Project / URL to GitHub Repository
 + URL to your hosted project
 + Approximately 5-minute video detailing your web app's purpose, design, and functionality
-+ ~~Your powerpoint deck~~
 + Peer evaluation
 
 Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 
-####Video Requirements
+<h3>Video Requirements</h3>
+
 + 5-minutes length max
 + Should focus on design and functionality
 + Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime)
@@ -59,10 +59,12 @@ Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 + Voice-over should tell a concrete story: user, problem, and how your app solves it
 + Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes. that were made to the interface?_)
 
-###Grade Breakdown
+<h3>Grade Breakdown</h3>
+
 + Coming soon
 
-###Submission Instructions
+<h3>Submission Instructions</h3>
+
 + Each team should fill up the project submission form (coming soon)
 + Each team member should fill up the  peer evaluation (coming soon). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
 
