added final project details

--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -50,7 +50,7 @@ On the day of your final presentation, your overall deliverables are:
 
 Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 
-<h3>Video Requirements</h3>
+<b>Video Requirements</b>
 
 + 5-minutes length max
 + Should focus on design and functionality
@@ -59,11 +59,11 @@ Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 + Voice-over should tell a concrete story: user, problem, and how your app solves it
 + Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes. that were made to the interface?_)
 
-<h3>Grade Breakdown</h3>
+<b>Grade Breakdown</b>
 
 + Coming soon
 
-<h3>Submission Instructions</h3>
+<b>Submission Instructions</b>
 
 + Each team should fill up the project submission form (coming soon)
 + Each team member should fill up the  peer evaluation (coming soon). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
