round 2 of fixes

--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -70,8 +70,7 @@ Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 
 <b>Submission Instructions</b>
 
-+ Each team should fill up the project submission [form] (https://docs.google.com/forms/d/1ZodilFDSTuoJAh76_0mYPyoFxhAhUabqOtUXPh7-n5A/viewform).
-+ Each team member should fill up the  peer [evaluation] (https://docs.google.com/forms/d/1ECFqjz5mcm4Re9M1er0mJxrg8C3Oh4xVLrWVq96EChM/viewform
-). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
++ Each team should fill up the project submission [form](https://docs.google.com/forms/d/1ZodilFDSTuoJAh76_0mYPyoFxhAhUabqOtUXPh7-n5A/viewform).
++ Each team member should fill up the  peer [evaluation](https://docs.google.com/forms/d/1ECFqjz5mcm4Re9M1er0mJxrg8C3Oh4xVLrWVq96EChM/viewform). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
 
 **Note**: There will be a final competition separate from the grading that will be judged on novelty and usefulness of app. Top teams would be publicized.
