--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -57,7 +57,7 @@ Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 + Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime)
 + Demo the important user flows
 + Voice-over should tell a concrete story: user, problem, and how your app solves it
-+ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes. that were made to the interface?_)
++ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes that were made to the interface?_)
 
 <b>Grade Breakdown</b>
 
@@ -72,5 +72,6 @@ Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 
 + Each team should fill up the project submission [form](https://docs.google.com/forms/d/1ZodilFDSTuoJAh76_0mYPyoFxhAhUabqOtUXPh7-n5A/viewform).
 + Each team member should fill up the  peer [evaluation](https://docs.google.com/forms/d/1ECFqjz5mcm4Re9M1er0mJxrg8C3Oh4xVLrWVq96EChM/viewform). We take the feedback from your peers about you contribution to the project very seriously. It has the potential to significantly impact your grade for the project.
++ The deadline to fill out both of these forms is noon central time on Friday, May 6th. 
 
 **Note**: There will be a final competition separate from the grading that will be judged on novelty and usefulness of app. Top teams would be publicized.
