--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -4,12 +4,12 @@ title: "MP 1.0: One Web Page To Rule Them All"
 due: Feb 16, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-<span class="section-heading">Due Date - 11.59pm on February 16, 2016</span>
+<span class="section-heading">Due Date - TBA</span>
 
 <div class="section-heading">Overview</div>
 In this programming assignment, you will design and implement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or a personal/portfolio page. This assignment will give you first-hand experience with HTML5 (e.g. header, canvas, video), CSS3/SASS (e.g. use of webfonts, animations, layout), and Javascript/jQuery.
 
-Refer to Dev Lab 1 for setting up a development environment and a server for this assignment.
+Refer to Dev Lab 1 for setting up a development environment for this assignment.
 
 <div class="section-heading">Required Features</div>
 Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.
@@ -61,6 +61,4 @@ Your webpage will have to implement the features listed below. Note that the exa
 
 <div class="section-heading">Submission Details</div>
 
-1. Add 'uiuc-web-programming' as a collaborator on your mp1 repository on Github. Then make a submission using [this submission form](http://uiucwp.com/mp1/submit). The submission system will pull your Github repository and serve it on our server. It will send you an email with a link to your hosted webpage. Open it and verify that your webpage looks like it was intended. If things need to be fixed, you can check out the log file whose link will also be in the email. After you are done fixing things you can push changes to your Github repository and resubmitting the form. Your last submission will be used for grading (older submissions get deleted once you resubmit the form).
-
-2. Fill out the required [supplemental form](https://docs.google.com/forms/d/1cAVTfyBzzzWEryPGL18834j4sfZ3P_JMlRKDIhi5QAQ/viewform). You only need to submit this form once. So, if you decide to rebuild your website in order to fix any broken resources, you should not resubmit the supplemental form.
+TBA
