--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -15,49 +15,49 @@ Refer to Dev Lab 1 for setting up a development environment for this assignment.
 Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.
 
 1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
-+	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
-+	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example). Make sure your implementation highlights the last menu item when you scroll to the bottom of the page. (<span style="color: blue"> Implementation Tip </span>: To figure out which menu item to highlight, you'll have to figure out which section lies directly below the bottom margin of the navigation bar. You can use methods that give you the height and position of different divs to figure that out. You will want to recompute this whenever there is a scroll event.)
-+ Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
-+	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
-+	Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif)
-+ Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
-+	Centering: Content in each horizontal stripe/section must be horizontally centered. At least one element on the page must be vertically centered. The vertically-centered element should remain centered even if the dimensions of its outer element changes.
-+	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
-+	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
-+	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
-+	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
-+	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
-+	Inclusion of social media icons
-+	<span style="color: red"> Extra Credit: </span>create a original [favicon](http://en.wikipedia.org/wiki/Favicon) for your page. The best favicon will be used for the class webpage.
+2.	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
+3.	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example). Make sure your implementation highlights the last menu item when you scroll to the bottom of the page. (<span style="color: blue"> Implementation Tip </span>: To figure out which menu item to highlight, you'll have to figure out which section lies directly below the bottom margin of the navigation bar. You can use methods that give you the height and position of different divs to figure that out. You will want to recompute this whenever there is a scroll event.)
+4. Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
+5.	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
+6.	Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif)
+7. Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
+8.	Centering: Content in each horizontal stripe/section must be horizontally centered. At least one element on the page must be vertically centered. The vertically-centered element should remain centered even if the dimensions of its outer element changes.
+9.	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
+10.	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
+11.	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
+12.	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
+13.	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
+14.	Inclusion of social media icons
+15.	<span style="color: red"> Extra Credit: </span>create a original [favicon](http://en.wikipedia.org/wiki/Favicon) for your page. The best favicon will be used for the class webpage.
 
 <div class="section-heading">Rules</div>
 1.	This is an individual assignment. No collaboration is permitted.
-+   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
-+	There must be no use of content management systems, or frameworks (e.g. Bootstrap, Pure CSS, Foundation, etc.)
-+	The only library that is allowed is jQuery
-+	HTML tables cannot be used for layout
-+	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
-+ If you think something you're doing might not be acceptable, please ask on Piazza.
+2.   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
+3.	There must be no use of content management systems, or frameworks (e.g. Bootstrap, Pure CSS, Foundation, etc.)
+4.	The only library that is allowed is jQuery
+5.	HTML tables cannot be used for layout
+6.	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
+7. If you think something you're doing might not be acceptable, please ask on Piazza.
 
 <div class="section-heading">Grade Breakdown</div>
 
 1. 	Layout and Overall Design - 20%
-+ Code (follows HTML5, SASS/SCSS, Javascript/jQuery best practices) - 10%
-+ Deployment to Server - 5%
-+	Sticky Navbar - 1%
-+	Position Indicator - 5%
-+ Navbar Resizing - 5%
-+	Smooth Scrolling - 10%
-+	Carousel - 10%
-+ Multi-column layout - 5%
-+	Centering - 2%
-+	Background Image - 1%
-+	Modal - 10%
-+	Video - 2%
-+	CSS3 Animations - 10%
-+	Scalable vector icons - 2%
-+	Inclusion of social media icons - 2%
-+	<span style="color: red"> Extra Credit: 2% </span>
+2. Code (follows HTML5, SASS/SCSS, Javascript/jQuery best practices) - 10%
+3. Deployment to Server - 5%
+4.	Sticky Navbar - 1%
+5.	Position Indicator - 5%
+6. Navbar Resizing - 5%
+7.	Smooth Scrolling - 10%
+8.	Carousel - 10%
+9. Multi-column layout - 5%
+10.	Centering - 2%
+11.	Background Image - 1%
+12.	Modal - 10%
+13.	Video - 2%
+14.	CSS3 Animations - 10%
+15.	Scalable vector icons - 2%
+16.	Inclusion of social media icons - 2%
+17.	<span style="color: red"> Extra Credit: 2% </span>
 
 <div class="section-heading">Submission Details</div>
 
