more changes and edits to mp1

--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -9,7 +9,7 @@ due: Feb 16, 11.59PM CST
 <div class="section-heading">Overview</div>
 In this programming assignment, you will design and implement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or a personal/portfolio page. This assignment will give you first-hand experience with HTML5 (e.g. header, canvas, video), CSS3/SASS (e.g. use of webfonts, animations, layout), and Javascript/jQuery.
 
-Refer to Dev Lab 1 for setting up a development environment for this assignment.
+Refer to [Dev Lab 1](https://uiuc-web-programming.github.io/fa2016/Lab-1) for setting up a development environment for this assignment.
 
 <div class="section-heading">Required Features</div>
 Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.
@@ -37,7 +37,7 @@ Your webpage will have to implement the features listed below. Note that the exa
 4.	The only library that is allowed is jQuery
 5.	HTML tables cannot be used for layout
 6.	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
-7. If you think something you're doing might not be acceptable, please ask on Piazza.
+7.  If you think something you're doing might not be acceptable, please ask on Piazza.
 
 <div class="section-heading">Grade Breakdown</div>
 
