setting up a server section in lab 1

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -110,3 +110,7 @@ grunt serve
 <span style="color: red"> Warning: </span>  **Do not edit anything under the `public/css` or `public/js` folders.** All things there are auto-generated and any changes you make there will get overwritten by Grunt.
 
 17 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
+
+<span class="section-heading">SETTING UP A SERVER</span>
+
+Details coming soon!
