--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -14,17 +14,17 @@ Refer to [Dev Lab 1](https://uiuc-web-programming.github.io/fa2016/Lab-1) for se
 <div class="section-heading">Required Features</div>
 Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.
 
-1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
-2.	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/3.gif)
+1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer
+2.	Sticky Navbar: A top navigation bar that sticks to the top of the window when scrolling
 3.	Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example). Make sure your implementation highlights the last menu item when you scroll to the bottom of the page. (<span style="color: blue"> Implementation Tip </span>: To figure out which menu item to highlight, you'll have to figure out which section lies directly below the bottom margin of the navigation bar. You can use methods that give you the height and position of different divs to figure that out. You will want to recompute this whenever there is a scroll event.)
-4. Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif)
-5.	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif)
-6.	Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif)
-7. Multi-column layout: A section with Multi-column content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png)
+4. Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller
+5.	Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar
+6.	Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side
+7. Multi-column layout: A section with Multi-column content
 8.	Centering: Content in each horizontal stripe/section must be horizontally centered. At least one element on the page must be vertically centered. The vertically-centered element should remain centered even if the dimensions of its outer element changes.
-9.	Background Image: A section which uses a fixed-position background image - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif)
-10.	Modal: A section which uses modal windows with additional content - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif)
-11.	Video: Embedded video using HTML5 video tag - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif)
+9.	Background Image: A section which uses a fixed-position background image
+10.	Modal: A section which uses modal windows with additional content
+11.	Video: Embedded video using HTML5 video tag
 12.	CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)
 13.	At least one use of scalable vector icons through CSS (e.g. FontAwesome)
 14.	Inclusion of social media icons
