--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -4,7 +4,7 @@ title: "MP 1.0: One Web Page To Rule Them All"
 due: Feb 16, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-<span class="section-heading">Due Date - TBA</span>
+<span class="section-heading">Due Date - Sept 19, 11.59PM CST</span>
 
 <div class="section-heading">Overview</div>
 In this programming assignment, you will design and implement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or a personal/portfolio page. This assignment will give you first-hand experience with HTML5 (e.g. header, canvas, video), CSS3/SASS (e.g. use of webfonts, animations, layout), and Javascript/jQuery.
