Updated with new VM stuff

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -108,4 +108,40 @@ grunt serve
 
 <span class="section-heading">SETTING UP A SERVER</span>
 
-Details coming soon!
+If you are officially enrolled in the class, you will receive a Virtual Machine from the course staff. Once you have the login credentials, you can ssh into the vm:
+
+```bash
+ssh cs498rk@[insert your hostname here]
+```
+
+Type in your password, and now repeat the steps in the previous section to clone your repository.
+
+Start screen and serve the files by running the expressjs server. You'll first need to install screen:
+```bash
+sudo apt-get install screen
+```
+
+You'll need to enter your password in to install it. You'll only need to do this one time.
+
+```bash
+screen
+node app.js
+```
+The webpage should be up at http://[your hostname here]:3000 . Check that in your browser.
+
+Detach from screen and logout
+
+```
+ctrl+a followerd by d
+exit
+```
+
+Keep the server running till MP 1 is graded. To stop the server in the future login to your server, reattach to screen and stop the server
+
+```
+ssh cs498rk@[insert your hostname here]
+screen -r
+ctrl+d
+exit # exit from screen
+exit # exit from server
+```
