--- a/_drafts/2016-9-20-MP-2.md
+++ b/_drafts/2016-9-20-MP-2.md
@@ -6,8 +6,12 @@ due: Oct 3, 11.59PM CST
 ---
 <span class="section-heading">Due Date - Oct 3, 2016, 11.59PM CST</span>
 
-<span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/mp2_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MP. 
+<span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/mp2_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MP. <br>
 <span style="color: red"> Attention: </span> Please pay attention to [Piazza](https://piazza.com/class/is4r0uppzfx4q9) because we will often make important announcements there regarding the MP before we make it in class.
+
+In this programming assignment, you will make a single-page website that is responsive & aesthetically pleasing. Part A is about doing research for your site and understanding common patterns in information architecture, style, and responsive design. Part B is about using the knowledge you gained in part A and applying it to an actual webpage that you will implement.
+
+You can use the development environment and server setup you used for MP1. Refer to Lab 2 & the README for details about the MP 2 starter code.
 
 <div class="section-heading">Part A: Research Data</div>
 
@@ -23,9 +27,9 @@ For the research portion of this MP, we are asking you to do research on other w
 2. Find  webpages that have **functionality** that you enjoy or find interesting. For these webpages, focus on the functionality and identify elements and interactions that inspired you (e.g. carousels, videos, drop-down menus, tooltips, etc). For each webpage, write an explanation with your observations about that particular page and why you chose it. Your write up for each web page must be at least 100 words.
 
 
-You will put your write ups in the corresponding folders in `research_data` in the MP2 starter.
+You will put your write ups in the `research_data` folder in the MP2 starter.
 
-Things to talk about can include:
+Things to talk about can include, but are not limited to:
 
 1. The pros and cons of different designs and pages that you see
 2. Features that you notice across different pages (ideally this trend is also reflected in your own webpage)
@@ -36,16 +40,14 @@ Things to talk about can include:
 
 
 <div class="section-heading">Part B: Responsive Design With Foundation</div>
-Goal: Create a  website using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
+Goal: Create a  website using the [Foundation front-end framework](http://foundation.zurb.com/docs/) such that the webpage's layout is responsive and is well-designed on all form factors. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
 
-In this programming assignment, you will make a single-page website responsive & aesthetically pleasing. Part A is about doing research for your site and understanding common patterns in information architecture, style, and responsive design. Now, you implement.
-
-You can use the development environment and server setup you used for MP 1. Refer to Lab 2 & the README for details about the MP 2 starter code.
+<span style="color: red"> Attention: </span> We are using Foundation 6, not Foundation 5. Make sure you are referring to the right documentation when developing.
 
 **Requirements:**
 
 1. Create a single-page marketing website for a **real client**: person, organization, company, concert, movie, etc. NOTE: You can reuse content for MP1 provided that it follows this requirement.
-2. Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
+2. Start from scratch -- don't borrow code from MP1. Borrowing code from MP1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
 3. Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes **(at least three)** and the rationale behind them.
 4. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas **(at least three)** and how you improved them.
 5. You must have all the elements we asked of you in [MP1](https://uiuc-web-programming.github.io/fa2016/MP-1) (i.e., navigation bar, carousel)
@@ -55,7 +57,7 @@ To improve the visual design of the web page from Part B, here are some specific
 
 1. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
 2. To customize Foundation components, modify the Foundation scss files in `source_sass/foundation`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
-3. Additional styles can also be added to the scss files in `source_sass` folder like you did in MP 1.
+3. Additional styles can also be added to the scss files in `source_sass` folder like you did in MP1.
 4. Your redesign should draw on the visual design principles discussed in class:
  + functionally similar elements should have similar styling; functionally different elements should be styled differently
  + contrast should be used to give visual weight to important areas
@@ -65,20 +67,23 @@ To improve the visual design of the web page from Part B, here are some specific
  + choose fonts and colors that match the mood/message/content of your site
 
 
+<span style="color: red"> Attention: </span> Once again, we are using Foundation 6, not Foundation 5. Make sure you are referring to the right documentation when developing.
+
+
 <div class="section-heading">Rules</div>
 1. This is an individual assignment. No collaboration is permitted.
 2. It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
 3. If you think something you're doing might not be acceptable, please ask on Piazza.
 4. If you have additional assets (say pictures) you should put them under `public/media` folder and put everything there or in its subfolders (say `public/media/pics` and `public/media/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory. You need to create the media folder yourself.
 5. You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
-6. You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
+6. You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repository (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
 7. You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be anything like:
 
 - ```html
 src="/photos/skyline.jpg"
 ```
 
-- They should all be relative paths (from your index.html file if thats where you are including this asset) like:
+- They should all be relative paths (from your index.html file if that is where you are including this asset) like:
 
 - ```html
 src="./photos/skyline.jpg"
@@ -89,8 +94,9 @@ src="./photos/skyline.jpg"
 <div class="section-heading">Grading Breakdown</div>
 
 1. Research of Visual and Functional Design - 20%
-2. Responsive Design - 60%
-3. Visual Design - 20%
+2. Responsive Design - 40%
+3. Implement MP1 Features - 20%
+4. Visual Design - 20%
  
 Please be mindful of the requirements that we've listed for each of these three sections. For the research portion, please be thorough with your write ups. For the responsive design portion, please responsify your website in at least 3 clear ways and explain what they are. For the visual design section, please improve your site in at least 3 ways and state why you made the changes you did. You will have a chance to explain what you did in the supplemental Google form when it is released.
 
