--- a/_posts/2016-9-20-MP-2.md
+++ b/_posts/2016-9-20-MP-2.md
@@ -7,7 +7,8 @@ due: Oct 3, 11.59PM CST
 <span class="section-heading">Due Date - Oct 3, 2016, 11.59PM CST</span>
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/mp2_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MP. <br>
-<span style="color: red"> Attention: </span> Please pay attention to [Piazza](https://piazza.com/class/is4r0uppzfx4q9) because we will often make important announcements there regarding the MP before we make it in class.
+<span style="color: red"> Attention: </span> Please pay attention to [Piazza](https://piazza.com/class/is4r0uppzfx4q9) because we will often make important announcements there regarding the MP before we make it in class. <br>
+<span style="color: red"> **Attention:** </span> **Please add `uiuc-web-programming` as a collaborator on Github.**
 
 In this programming assignment, you will make a single-page website that is responsive & aesthetically pleasing. Part A is about doing research for your site and understanding common patterns in information architecture, style, and responsive design. Part B is about using the knowledge you gained in part A and applying it to an actual webpage that you will implement.
 
@@ -101,3 +102,5 @@ src="./photos/skyline.jpg"
 Please be mindful of the requirements that we've listed for each of these three sections. For the research portion, please be thorough with your write ups. For the responsive design portion, please responsify your website in at least 3 clear ways and explain what they are. For the visual design section, please improve your site in at least 3 ways and state why you made the changes you did. You will have a chance to explain what you did in the supplemental Google form when it is released.
 
 Submission details: TBA
+
+<span style="color: red"> **Attention:** </span> **Please add `uiuc-web-programming` as a collaborator on Github.**
