add mp2 supplemental form link

--- a/_posts/2016-9-20-MP-2.md
+++ b/_posts/2016-9-20-MP-2.md
@@ -101,6 +101,10 @@ src="./photos/skyline.jpg"
  
 Please be mindful of the requirements that we've listed for each of these three sections. For the research portion, please be thorough with your write ups. For the responsive design portion, please responsify your website in at least 3 clear ways and explain what they are. For the visual design section, please improve your site in at least 3 ways and state why you made the changes you did. You will have a chance to explain what you did in the supplemental Google form when it is released.
 
-Submission details: TBA
+<div class="section-heading">Submission Details</div>
+
+Please submit your MP at [http://uiucwp.com/#/submit](http://uiucwp.com/#/submit).
+
+Make sure you fill out the supplemental submission form once you complete your MP. You can find the form [here](https://docs.google.com/forms/d/e/1FAIpQLSdso5eLsMbagg6dVhMIJB4HoC_fQe7IH6HKTxRByF2Nc3hXBA/viewform). The supplemental form is required!
 
 <span style="color: red"> **Attention:** </span> **Please add `uiuc-web-programming` as a collaborator on Github.**
