delete duplicate mp3 + update FP spec

--- a/_posts/2016-10-5-Final.md
+++ b/_posts/2016-10-5-Final.md
@@ -24,12 +24,16 @@ Fill out [this short Google form](https://docs.google.com/forms/d/e/1FAIpQLSc7fg
 
 Upload a **one-page** PDF proposal to [this Google drive folder](https://drive.google.com/open?id=0B9NPDyNcX5d8cGxPNEd5Rzd4MW8) containing the following:
 
-+ Team Name
-+ Team Members (Names and NetIDs)
-+ Problem Statement & Motivation
-+ Solution Approach
-+ Technologies used for front end & back end
-+ Specific breakdown of what each team member is responsible for
+1. Team Name
+2. Team Members (Names and NetIDs)
+3. Three Project Proposals with the following:
+  - Problem Statement + Motivation
+  - User problems you are solving
+  - Basic interactions your app will support in service of goal
+  - Other apps that are similar
+  - How your app is different
+
+There is no length requirement for the proposals, but they should cover all the information above.
 
 <span class="section-heading">Part B: Paper Prototypes</span>
 
@@ -45,21 +49,21 @@ Paper prototypes should capture at least three of the key interactions in your t
 
 On the day of your final presentation, your overall deliverables are:
 
-+ Source Code for the Project / URL to GitHub Repository
-+ URL to your hosted project
-+ Approximately 5-minute video detailing your web app's purpose, design, and functionality
-+ Peer evaluation
+1. Source Code for the Project / URL to GitHub Repository
+2. URL to your hosted project
+3. Approximately 5-minute video detailing your web app's purpose, design, and functionality
+4. Peer evaluation
 
 Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
 
 <b>Video Requirements</b>
 
-+ 5-minutes length max
-+ Should focus on design and functionality
-+ Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime)
-+ Demo the important user flows
-+ Voice-over should tell a concrete story: user, problem, and how your app solves it
-+ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes that were made to the interface?_)
+1. 5-minutes length max
+2. Should focus on design and functionality
+3. Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime)
+4. Demo the important user flows
+5. Voice-over should tell a concrete story: user, problem, and how your app solves it
+6. Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes that were made to the interface?_)
 
 <b>Grade Breakdown</b>
 
