clear up mp3 instructions

--- a/_posts/2016-10-4-MP-3.md
+++ b/_posts/2016-10-4-MP-3.md
@@ -31,7 +31,7 @@ We recommend you to use the following project structure:
 
 __Files__:
 
-1. The main HTML file for this app should be `public/index.html`, **but you should not need to touch this file**.
+1. The main HTML file for this app should be `public/index.html`, **but you should not have to make major changes to it** (no more than 5-6 lines of code).
 The line of code `<div ng-view></div>` in the index.html inserts a partial into that div. It is up to you to set up the routing in your JS file.
 2. Your app has three main views (one for the list, one for the gallery and the other for displaying the details of a particuar movie). These should be implemented using three different [Angular routing and partial templates](https://docs.angularjs.org/tutorial/step_07). You can implement them in the three files in `public/partials`
 3. Your Angular code should go in `source_js/app.js` except for the controllers. The controllers should be in `source_js/controllers.js`. This keeps your code organized.
