Add submission details and supplemental form link

--- a/_posts/2016-10-4-MP-3.md
+++ b/_posts/2016-10-4-MP-3.md
@@ -119,5 +119,8 @@ imdbControllers.controller('myController', function($scope, $http) {
 This prevents the function parameter names from being changed.
 
 <div class="section-heading"> Submission Details </div>
-TBD.
+Please submit your MP at [http://uiucwp.com/#/submit](http://uiucwp.com/#/submit).
+
+Make sure you fill out the supplemental submission form once you complete your MP. You can find the form [here](https://drive.google.com/open?id=1ZyBVkOAEs9uWqPPxgWUFSXWprPZTbSRLXiTurqVWIt0). The supplemental form is required!
+
 If you run into any issues using the submission and build system, please post on Piazza.
