updated gitignore and fixed due date to TBD

--- a/_posts/2016-10-19-MP-4-2.md
+++ b/_posts/2016-10-19-MP-4-2.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "MP 4.2: Creating a RESTful API"
-due: April 12, 11.59PM CST
+due: TBA
 <!-- permalink: lab1.html -->
 ---
 <span class="section-heading">Due Date - TBA</span>
