Add tip to MP 4.1

--- a/_posts/2016-10-19-MP-4-1.md
+++ b/_posts/2016-10-19-MP-4-1.md
@@ -169,7 +169,7 @@ Also, here is a list of angular things that you might find useful
 * [Writing an AngularJS services](http://stackoverflow.com/a/13939813)
 * Look at [this stack overflow question](http://stackoverflow.com/questions/13937318/convert-angular-http-get-function-to-a-service) to understand how to write a service
 * Here is a [helpful beginner tutorial] for some of the technologies used in this MP.(http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/)
-
+* Apparently, Angular always makes an [OPTIONS request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request). For MP 4.1 you do not need to worry about this, but it is good to know for when you see these requests popping up in the inspector.
 
 <span class="section-heading">Submission Details</span>
 TBD
