--- a/_posts/2016-10-19-MP-4-2.md
+++ b/_posts/2016-10-19-MP-4-2.md
@@ -117,7 +117,16 @@ Requirements:
 ```
 
 
-* Here is a [helpful beginner tutorial] for some of the technologies used in this MP.(http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/)
+* Here is a [helpful beginner tutorial](http://adrianmejia.com/blog/2014/09/28/angularjs-tutorial-for-beginners-with-nodejs-expressjs-and-mongodb/) for some of the technologies used in this MP.
+
+* Apparently, Angular always makes a [OPTIONS request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request) and so your API should respond to a OPTIONS request at the endpoints where POST is implemented. You should be able to do something as simple as the following (as we are setting the response headers when we are handling the CORS stuff):
+
+```javascript
+someRoute.options(function(req, res){
+      res.writeHead(200);
+      res.end();
+});
+```
 
 
 <span class="section-heading">Submission Details: TBD</span>
