Add mp4.1 & mp4.2 due dates

--- a/_posts/2016-10-19-MP-4-2.md
+++ b/_posts/2016-10-19-MP-4-2.md
@@ -4,7 +4,7 @@ title: "MP 4.2: Creating a RESTful API"
 due: TBA
 <!-- permalink: lab1.html -->
 ---
-<span class="section-heading">Due Date - TBA</span>
+<span class="section-heading">Due Date - *November 21st*, 2016, 11.59PM CST</span>
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016), [this repository](https://github.com/uiuc-web-programming/mp4_client_starter) and [this repository](https://github.com/uiuc-web-programming/mp4_server_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
