Update submission details for MP4.1 and 4.2

--- a/_posts/2016-10-19-MP-4-1.md
+++ b/_posts/2016-10-19-MP-4-1.md
@@ -172,6 +172,9 @@ Also, here is a list of angular things that you might find useful
 * Apparently, Angular always makes an [OPTIONS request before a POST request](http://stackoverflow.com/questions/24656488/angularjs-how-to-disable-option-request). For MP 4.1 you do not need to worry about this, but it is good to know for when you see these requests popping up in the inspector.
 
 <span class="section-heading">Submission Details</span>
-TBD
+
+Please submit the first part of the MP at [http://uiucwp.com/#/submit](http://uiucwp.com/#/submit).
+
+Make sure you fill out the supplemental submission form once have finished both parts of the MP (4.1 and 4.2). You can find the form [here](https://docs.google.com/forms/d/e/1FAIpQLSeieVb4Cn44XFflYWP9y46ltZWnuZF0k4l11FXJ5g3V3zjuwg/viewform). The supplemental form is required!
 
 If you run into any issues using the submission and build system, please post on Piazza.
