--- a/_posts/2016-10-19-MP-4-2.md
+++ b/_posts/2016-10-19-MP-4-2.md
@@ -129,6 +129,10 @@ someRoute.options(function(req, res){
 ```
 
 
-<span class="section-heading">Submission Details: TBD</span>
+<span class="section-heading">Submission Details:</span>
+
+Please submit the second part of the MP at [http://uiucwp.com:8000/#/submit](http://uiucwp.com:8000/#/submit).
+
+Make sure you fill out the supplemental submission form once have finished both parts of the MP (4.1 and 4.2). You can find the form [here](https://docs.google.com/forms/d/e/1FAIpQLSeieVb4Cn44XFflYWP9y46ltZWnuZF0k4l11FXJ5g3V3zjuwg/viewform). The supplemental form is required!
 
 If you run into any issues using the submission and build system, please post on Piazza.
